[package]
name = "mapscow-mule"
version = "0.1.0"
edition = "2021"
authors = ["Yann"]
description = "A Maperitive clone built in Rust for high-quality SVG map generation"
license = "MIT"

[lib]
name = "mapscow_mule"
path = "src/lib.rs"

[dependencies]
# GUI Framework
egui = "0.29"
eframe = { version = "0.29", features = ["default_fonts", "glow"] }

# SVG Generation
svg = "0.17"
resvg = "0.44"
usvg = "0.44"

# XML Processing for OSM data
quick-xml = "0.36"
roxmltree = "0.20"

# Geographic computations
geo = "0.28"
geo-types = "0.7"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Directories for config
dirs = "5.0"

# Image processing
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"

# HTTP client for downloading OSM data
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# File I/O and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File dialogs
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Math and geometry
nalgebra = "0.33"
lyon_tessellation = "1.0"
lyon_path = "1.0"

# Color handling
palette = "0.7"

# Configuration
config = "0.14"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

[dependencies.gpx]
version = "0.10"
features = ["serde"]

[[bin]]
name = "mapscow-mule"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
